--- a/packages/dts-webpack-plugin/package.json
+++ b/packages/dts-webpack-plugin/package.json
@@ -42,6 +42,7 @@
         "@littlethings/log": "^1.3.1",
         "mkdirp": "^1.0.4",
         "npm-run": "^5.0.1",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "schema-utils": "^2.7.1"
     }
 }
