--- a/packages/dts-webpack-plugin/package.json
+++ b/packages/dts-webpack-plugin/package.json
@@ -25,15 +25,18 @@
         "url": "git+https://github.com/jakehamilton/packages.git"
     },
     "scripts": {
-        "test": "echo \"Error: run tests from root\" && exit 1"
+        "precommit": "lint-staged"
     },
     "bugs": {
         "url": "https://github.com/jakehamilton/packages/issues"
     },
+    "lint-staged": {
+        "*.{ts,tsx,js,jsx}": "prettier --write"
+    },
     "devDependencies": {
-        "@types/react": "^16.9.49",
         "fork-ts-checker-webpack-plugin": "^5.1.0",
-        "tmp": "^0.2.1",
+        "lint-staged": "^10.3.0",
+        "prettier": "^2.1.1",
         "typescript": "^4.0.2",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12"
@@ -43,6 +46,7 @@
         "mkdirp": "^1.0.4",
         "npm-run": "^5.0.1",
         "rimraf": "^3.0.2",
-        "schema-utils": "^2.7.1"
+        "schema-utils": "^2.7.1",
+        "tmp": "^0.2.1"
     }
 }
