--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,15 @@ jobs:
           git remote set-url origin https://$GITHUB_ACTOR:$GH_TOKEN@github.com/jakehamilton/packages
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - name: Configure Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
+      - name: Configure NPM
+        run: |
+          cat <<EOF > .npmrc
+          //https://registry.npmjs.org/:_authToken \${NPM_TOKEN}
+          EOF
       - name: Checkout and pull branch
         run: git checkout "${GITHUB_REF:11}" && git pull
       - name: Install Packages
