--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,13 +33,13 @@ jobs:
         run: npm whoami
       - name: Checkout and pull branch
         run: git checkout "${GITHUB_REF:11}" && git pull
-      - name: Install Packages
+      - name: Install Dependencies
         run: |
-          npm install
+          npm install --no-save
           npm run chore:bootstrap
       - name: Build Packages
         run: npm run ci:build:changed
-      - name: Version
+      - name: Version Packages
         run: npm run ci:version
-      - name: Publish
+      - name: Publish Packages
         run: npm run ci:publish
