--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,12 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "independent"
+    "packages": ["packages/*"],
+    "version": "independent",
+    "command": {
+        "publish": {
+            "message": "chore(release): Publish"
+        },
+        "bootstrap": {
+            "npmClientArgs": "--no-save"
+        }
+    }
 }
