--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "lerna run --concurrency 1 --stream precommit --since HEAD --exclude-dependents",
+            "pre-commit": "lint-staged",
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     },
@@ -20,10 +20,15 @@
             "@commitlint/config-conventional"
         ]
     },
+    "lint-staged": {
+        "*.{md,ts,tsx,js,jsx}": "prettier --write"
+    },
     "devDependencies": {
         "@commitlint/cli": "^9.1.2",
         "@commitlint/config-conventional": "^9.1.2",
         "husky": "^4.3.0",
-        "lerna": "^3.22.1"
+        "lerna": "^3.22.1",
+        "lint-staged": "^10.3.0",
+        "prettier": "^2.1.1"
     }
 }
