--- a/packages/dts-webpack-plugin/package.json
+++ b/packages/dts-webpack-plugin/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@jakehamilton/dts-webpack-plugin",
     "version": "1.1.5",
-    "description": "A webpack plugin to generate a single DTS file from your bundle.",
+    "description": "A webpack plugin to generate type definitions.",
     "keywords": [
         "webpack",
         "typescript",
@@ -26,9 +26,6 @@
     },
     "bugs": {
         "url": "https://github.com/jakehamilton/packages/issues"
-    },
-    "lint-staged": {
-        "*.{ts,tsx,js,jsx}": "prettier --write"
     },
     "devDependencies": {
         "fork-ts-checker-webpack-plugin": "^5.1.0",
