--- a/.github/workflows/open-issue.yaml
+++ b/.github/workflows/open-issue.yaml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: |
+          ls -la
+          ls -la $GITHUB_WORKSPACE
           cd $GITHUB_WORKSPACE/.github/scripts/pull-request
           npm install --no-save
       - uses: actions/github-script@v3
