--- a/.github/workflows/version-and-publish.yaml
+++ b/.github/workflows/version-and-publish.yaml
@@ -1,4 +1,4 @@
-name: Version
+name: Version & Publish
 
 on:
   push:
@@ -37,3 +37,5 @@ jobs:
         run: npm install --no-save
       - name: Version Packages
         run: npm run ci:version
+      - name: Publish Packages
+        run: npm run ci:publish
