--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,7 @@
 name: Publish
 
 on:
-  push:
+  create:
     tags:
       - "*"
 
@@ -14,31 +14,30 @@ jobs:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
-      - run: echo hi
-      # - name: Checkout
-      #   uses: actions/checkout@v1
-      # - name: Configure Git
-      #   run: |
-      #     git config --global user.name '@jakehamilton'
-      #     git config --global user.email 'jakehamilton@users.noreply.github.com'
-      #     git remote set-url origin https://$GITHUB_ACTOR:$GH_TOKEN@github.com/jakehamilton/packages
-      # - name: Configure Node
-      #   uses: actions/setup-node@v1
-      #   with:
-      #     node-version: "12.x"
-      # - name: Configure NPM
-      #   run: |
-      #     npm config set registry https://registry.npmjs.org/
-      #     npm config set //registry.npmjs.org/:_authToken=\${NPM_TOKEN}
-      # - name: Check Authentication with Registry
-      #   run: npm whoami
-      # - name: Checkout and pull branch
-      #   run: git checkout "${GITHUB_REF:11}" && git pull && git pull --tags
-      # - name: Install Dependencies
-      #   run: |
-      #     npm install --no-save
-      #     npm run chore:bootstrap
-      # - name: Build Packages
-      #   run: npm run ci:build:changed
-      # - name: Publish Packages
-      #   run: npm run ci:publish
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Configure Git
+        run: |
+          git config --global user.name '@jakehamilton'
+          git config --global user.email 'jakehamilton@users.noreply.github.com'
+          git remote set-url origin https://$GITHUB_ACTOR:$GH_TOKEN@github.com/jakehamilton/packages
+      - name: Configure Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
+      - name: Configure NPM
+        run: |
+          npm config set registry https://registry.npmjs.org/
+          npm config set //registry.npmjs.org/:_authToken=\${NPM_TOKEN}
+      - name: Check Authentication with Registry
+        run: npm whoami
+      - name: Checkout and pull branch
+        run: git checkout "${GITHUB_REF:11}" && git pull && git pull --tags
+      - name: Install Dependencies
+        run: |
+          npm install --no-save
+          npm run chore:bootstrap
+      - name: Build Packages
+        run: npm run ci:build:changed
+      - name: Publish Packages
+        run: npm run ci:publish
