--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,12 +32,10 @@ jobs:
       - name: Check Authentication with Registry
         run: npm whoami
       - name: Checkout and pull branch
-        run: git checkout "${GITHUB_REF:11}" && git pull && git pull --tags
+        run: git checkout "@${GITHUB_REF:11}"
       - name: Install Dependencies
         run: |
           npm install --no-save
           npm run chore:bootstrap
-      - name: Build Packages
-        run: npm run ci:build:changed
       - name: Publish Packages
         run: npm run ci:publish
