--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -1,4 +1,5 @@
 {
+    "private": true,
     "name": "@jakehamilton/titan",
     "version": "1.0.0",
     "description": "A simple, opinionated monorepo management tool.",
