--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -25,9 +25,7 @@
         "type": "git",
         "url": "git+https://github.com/jakehamilton/packages.git"
     },
-    "scripts": {
-        "build": "webpack"
-    },
+    "scripts": {},
     "bugs": {
         "url": "https://github.com/jakehamilton/packages/issues"
     },
