--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -53,3 +53,11 @@ jobs:
         run: npm run ci:version
       - name: Publish Packages
         run: npm run ci:publish
+      - name: Build Documentation
+        run: npm run docs:build
+      - name: Deploy Documentation
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/.vuepress/dist
+          cname: docs.jakehamilton.dev
