--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -55,9 +55,10 @@ jobs:
         run: npm run ci:publish
       - name: Build Documentation
         run: npm run docs:build
+        env:
+          BASE_URL: "/packages/"
       - name: Deploy Documentation
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs/.vuepress/dist
-          cname: docs.jakehamilton.dev
