--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -40,6 +40,7 @@
         "inquirer": "^7.3.3",
         "mkdirp": "^1.0.4",
         "npm-package-arg": "^8.0.1",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "semver": "^7.3.2"
     }
 }
