--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -21,7 +21,7 @@
         "dist"
     ],
     "bin": {
-        "titan": "src/index.js"
+        "titan": "bin/titan.js"
     },
     "repository": {
         "type": "git",
