fix: ship source directory

--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -18,7 +18,8 @@
         "src": "src"
     },
     "files": [
-        "dist"
+        "bin",
+        "src"
     ],
     "bin": {
         "titan": "bin/titan.js"
