--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -36,8 +36,9 @@
         "@types/node": "^14.11.1"
     },
     "dependencies": {
-        "@littlethings/log": "^1.3.1",
+        "@littlethings/log": "^2.3.0",
         "@littlethings/test": "^1.2.1",
+        "@starters/core": "^1.1.0",
         "arg": "^4.1.3",
         "chalk": "^4.1.0",
         "inquirer": "^7.3.3",
