--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -33,12 +33,13 @@
         "url": "https://github.com/jakehamilton/packages/issues"
     },
     "devDependencies": {
-        "@types/node": "^14.11.1"
+        "@types/node": "^14.11.1",
+        "enquirer": "^2.3.6"
     },
     "dependencies": {
         "@littlethings/log": "^2.3.0",
         "@littlethings/test": "^1.2.1",
-        "@starters/core": "^1.1.0",
+        "@starters/core": "^1.2.0",
         "arg": "^4.1.3",
         "chalk": "^4.1.0",
         "inquirer": "^7.3.3",
