--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -33,15 +33,15 @@
         "url": "https://github.com/jakehamilton/packages/issues"
     },
     "devDependencies": {
-        "@types/node": "^14.11.1",
-        "enquirer": "^2.3.6"
+        "@types/node": "^14.11.1"
     },
     "dependencies": {
         "@littlethings/log": "^2.3.0",
         "@littlethings/test": "^1.2.1",
-        "@starters/core": "^1.4.0",
+        "@starters/core": "^1.5.0",
         "arg": "^4.1.3",
         "chalk": "^4.1.0",
+        "enquirer": "^2.3.6",
         "inquirer": "^7.3.3",
         "mkdirp": "^1.0.4",
         "rimraf": "^3.0.2",
