--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
     "name": "root",
     "private": true,
     "scripts": {
-        "chore:bootstrap": "lerna bootstrap",
-        "docs:dev": "vuepress dev ./docs",
-        "docs:build": "vuepress build ./docs",
-        "ci:bootstrap": "lerna bootstrap --since",
-        "ci:build": "lerna run build --since",
-        "ci:version": "lerna version --conventional-commits --create-release=github -m \"chore(release): publish\" -y",
-        "ci:version:prerelease": "lerna version --conventional-prerelease --conventional-commits --create-release=github -m \"chore(release): publish prerelease\" -y",
-        "ci:publish": "lerna publish from-git -y"
+        "bootstrap": "titan install --no-save",
+        "bootstrap:changed": "titan install --changed --no-save",
+        "build": "titan run build",
+        "build:changed": "titan run build --changed",
+        "test": "titan run test",
+        "test:changed": "titan run test --changed",
+        "version": "titan version",
+        "publish": "titan publish"
+    },
+    "titan": {
+        "packages": [
+            "./packages"
+        ]
     },
     "husky": {
         "hooks": {
@@ -25,15 +30,18 @@
     "lint-staged": {
         "*.{md,json,ts,tsx,js,jsx}": "prettier --write"
     },
+    "prettier": {
+        "tabWidth": 4
+    },
     "devDependencies": {
         "@commitlint/cli": "^9.1.2",
         "@commitlint/config-conventional": "^9.1.2",
+        "@jakehamilton/titan": "^5.0.0",
         "@vuepress/plugin-active-header-links": "^1.5.4",
         "@vuepress/plugin-back-to-top": "^1.5.4",
         "@vuepress/plugin-nprogress": "^1.5.4",
         "@vuepress/plugin-pwa": "^1.5.4",
         "husky": "^4.3.0",
-        "lerna": "^3.22.1",
         "lint-staged": "^10.3.0",
         "prettier": "^2.1.1",
         "vuepress": "^1.5.4"
