fix: publish micro subpackage

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,7 +19,8 @@
     },
     "files": [
         "dist/**/*",
-        "src/**/*"
+        "src/**/*",
+        "micro/**/*"
     ],
     "repository": {
         "type": "git",
