--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -25,7 +25,7 @@ jobs:
             - name: Configure Git
               run: |
                   git config --global user.name 'GitHub Action'
-                  git config --global user.email 'action@github.com'
+                  git config --global user.email 'actions@github.com'
                   git remote set-url origin https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY
             - name: Update History and Tags
               run: |
