--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -40,11 +40,11 @@
         "@littlethings/test": "^1.2.1",
         "@starters/core": "^1.7.0",
         "arg": "^4.1.3",
-        "chalk": "^4.1.0",
         "enquirer": "^2.3.6",
         "inquirer": "^7.3.3",
         "mkdirp": "^1.0.4",
         "rimraf": "^3.0.2",
-        "semver": "^7.3.2"
+        "semver": "^7.3.2",
+        "kleur": "^4.1.3"
     }
 }
