feat: parallel exec and cache support

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,6 +14,12 @@
     "main": "dist/ui.js",
     "module": "dist/ui.modern.module.js",
     "unpkg": "dist/ui.umd.js",
+    "titan": {
+        "artifacts": [
+            "./dist",
+            "./src"
+        ]
+    },
     "publishConfig": {
         "access": "public"
     },
