--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -36,7 +36,7 @@
         "@types/node": "^14.11.1"
     },
     "dependencies": {
-        "@littlethings/log": "^2.3.0",
+        "@littlethings/log": "^2.5.0",
         "@littlethings/test": "^1.2.1",
         "@starters/core": "^1.7.0",
         "arg": "^4.1.3",
@@ -44,6 +44,7 @@
         "mkdirp": "^1.0.4",
         "rimraf": "^3.0.2",
         "semver": "^7.3.2",
-        "kleur": "^4.1.3"
+        "kleur": "^4.1.3",
+        "abort-controller": "^3.0.0"
     }
 }
