--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -39,12 +39,12 @@
         "@littlethings/log": "^2.5.0",
         "@littlethings/test": "^1.2.1",
         "@starters/core": "^1.7.0",
+        "abort-controller": "^3.0.0",
         "arg": "^4.1.3",
         "enquirer": "^2.3.6",
+        "kleur": "^4.1.3",
         "mkdirp": "^1.0.4",
         "rimraf": "^3.0.2",
-        "semver": "^7.3.2",
-        "kleur": "^4.1.3",
-        "abort-controller": "^3.0.0"
+        "semver": "^7.3.2"
     }
 }
