feat: add support for updating package metadata

--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -45,6 +45,7 @@
         "kleur": "^4.1.3",
         "mkdirp": "^1.0.4",
         "rimraf": "^3.0.2",
-        "semver": "^7.3.2"
+        "semver": "^7.3.2",
+        "giturl": "^1.0.1"
     }
 }
