--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@jakehamilton/titan",
     "version": "5.11.0",
-    "description": "A simple, opinionated monorepo management tool.",
+    "description": "A little tool for big (monorepo) projects.",
     "keywords": [
         "monorepo",
         "cli",
