--- a/packages/titan/package.json
+++ b/packages/titan/package.json
@@ -36,16 +36,16 @@
         "@types/node": "^14.11.1"
     },
     "dependencies": {
-        "@littlethings/log": "^3.0.5",
+        "@littlethings/log": "^3.0.7",
         "@littlethings/test": "^1.2.1",
         "@starters/core": "^1.7.2",
         "abort-controller": "^3.0.0",
         "arg": "^4.1.3",
         "enquirer": "^2.3.6",
+        "giturl": "^1.0.1",
         "kleur": "^4.1.3",
         "mkdirp": "^1.0.4",
         "rimraf": "^3.0.2",
-        "semver": "^7.3.2",
-        "giturl": "^1.0.1"
+        "semver": "^7.3.2"
     }
 }
